# pyS15

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: format-lint-check.yml  wheels.yml
S15apps/: powermeter_app.py
S15lib/: __init__.py
S15lib/apps/: DPG_Mermaid_parser.py  DPG_Mermaid_syntax.md  align_source.py  inst_efficiency.py  powermeter_app.py
S15lib/devices/: __init__.py  powermeter.py  serialconnection.py
S15lib/g2lib/: Makefile  __init__.py  coinc4.pyx  delta.c  delta.pyx  g2lib.py  parse_timestamps.py  setup.py  test.raw
S15lib/instruments/: __init__.py  digital_pattern_generator.py  lcr_driver.py  optical_switch_triple.py  parse_timestamps.py  powermeter.py  serial_connection.py  single_photon_detector.py  spdc_driver.py  stepper_motor_driver.py  timestamp7.py  universal_discriminator.py  usb_counter_fpga.py
ci/: export_sdist_name.py
docs/: developer.md  pyserial.md
examples/: EPPS_operation.py  TDC1_g2_coincidences.py  TDC1_sample_timestamp_collect.py  TDC1_time_to_digital_converter.ipynb  cond_g2_TDC1.py  tdc1_4ch_input_timestamp_mode
examples/DPG/: complex.txt  example1.txt  example1_128bit.txt  example2.txt  example2_128bit.txt  example3.txt  example3_128bit.txt  example4.txt  example4_128bit.txt  generate_g2_examples.py  out_anti_bunch.txt
examples/DPG/outfile/: g2_anti_bunch.dpatt  g2_bunch.dpatt
